--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "require": {
         "illuminate/contracts": "7.* || ^8.15 || 9.0 - 9.34 || ^9.36 || ^10.0",
         "ext-json": "*",
-        "unicodeveloper/laravel-paystack": "^1.1",
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "raadaa-partners/raadaa-base": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
